; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ACTION_CostInitialize.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_action.c_ACTION_CostInitialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }

@szCostingComplete = common dso_local global i32 0, align 4
@szZero = common dso_local global i32 0, align 4
@szRootDrive = common dso_local global i32 0, align 4
@szCRoot = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*)* @ACTION_CostInitialize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ACTION_CostInitialize(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @szCostingComplete, align 4
  %7 = load i32, i32* @szZero, align 4
  %8 = call i32 @msi_set_property(i32 %5, i32 %6, i32 %7, i32 -1)
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @szRootDrive, align 4
  %13 = load i32, i32* @szCRoot, align 4
  %14 = call i32 @msi_set_property(i32 %11, i32 %12, i32 %13, i32 -1)
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %16 = call i32 @load_all_folders(%struct.TYPE_9__* %15)
  %17 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %18 = call i32 @msi_load_all_components(%struct.TYPE_9__* %17)
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %20 = call i32 @msi_load_all_features(%struct.TYPE_9__* %19)
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %22 = call i32 @load_all_files(%struct.TYPE_9__* %21)
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %24 = call i32 @load_all_patches(%struct.TYPE_9__* %23)
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %26 = call i32 @load_all_media(%struct.TYPE_9__* %25)
  %27 = load i32, i32* @ERROR_SUCCESS, align 4
  ret i32 %27
}

declare dso_local i32 @msi_set_property(i32, i32, i32, i32) #1

declare dso_local i32 @load_all_folders(%struct.TYPE_9__*) #1

declare dso_local i32 @msi_load_all_components(%struct.TYPE_9__*) #1

declare dso_local i32 @msi_load_all_features(%struct.TYPE_9__*) #1

declare dso_local i32 @load_all_files(%struct.TYPE_9__*) #1

declare dso_local i32 @load_all_patches(%struct.TYPE_9__*) #1

declare dso_local i32 @load_all_media(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
